crates/bonsaidb-macros/tests/ui/missing_authority.stderr
error: You need to specify the collection name via `#[collection(authority="authority")]`
 --> tests/ui/missing_authority.rs:3:10
  |
3 | #[derive(Collection)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Collection` (in Nightly builds, run with -Z macro-backtrace for more info)
