crates/bonsaidb-macros/tests/ui/missing_authority.rs
use bonsaidb_macros::Collection;

#[derive(Collection)]
#[collection(name = "hello")]
struct Test;

fn main() {}
